MAUI BS 7.0: - Updated the nuget package to latest internal alpha - Make Code Optimisation, UI optimisations - Fixed a few warnings. - Updated comments, snippets.

--- a/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -40,6 +40,6 @@
         <MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="7.0.0-local-maui.70" />
+      <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="7.0.0-alpha.2" />
     </ItemGroup>
 </Project>
