--- a/BarcodeSDK.MAUI.Example/Platforms/Android/AndroidManifest.xml
+++ b/BarcodeSDK.MAUI.Example/Platforms/Android/AndroidManifest.xml
@@ -6,6 +6,6 @@
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-feature android:name="android.hardware.camera" />
 	
-	<!-- Below permission is required for downloading the images from URLs in RTU v2 -->
+	<!-- Below permission is required for downloading the images from URLs in the RTU UI -->
 	<uses-permission android:name="android.permission.INTERNET" />
 </manifest>
