--- a/BarcodeSDK.NET.Droid.Example/BarcodeSDK.NET.Droid.Example.csproj
+++ b/BarcodeSDK.NET.Droid.Example/BarcodeSDK.NET.Droid.Example.csproj
@@ -8,11 +8,21 @@
         <ApplicationId>io.scanbot.example.sdk.barcode.net</ApplicationId>
         <ApplicationVersion>1</ApplicationVersion>
         <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
-        <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
+        <EmbedAssembliesIntoApk>false</EmbedAssembliesIntoApk>
         <RootNamespace>BarcodeSDK.NET.Droid</RootNamespace>
         <CreatePackage>false</CreatePackage>
         <MtouchLink>SdkOnly</MtouchLink>
         <WarningsAsErrors>NU1603</WarningsAsErrors>
+    </PropertyGroup>
+    
+    <!-- Speeds up debug builds -->
+    <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
+        <DebugType>portable</DebugType>
+        <RunAOTCompilation>false</RunAOTCompilation>
+        <PublishTrimmed>false</PublishTrimmed>
+        <UseInterpreter>false</UseInterpreter>
+        <AndroidLinkMode>None</AndroidLinkMode>
+        <AndroidUseSharedRuntime>true</AndroidUseSharedRuntime>
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="ScanbotBarcodeSDK.NET" Version="7.0.0-rc.1" />
