[EPIC-5768] MAUI BS 7.0.0 (#54)
- Fixed breaking changes and updated code to consume the latest SDK APIs.
- Droid: Permission for Internet uncommented, as our FindAndPick example is using urls.
- ItemMapper Snippets Fixed.
- Make Code Optimisation, UI optimisations
- Fixed a few warnings.
- Updated comments, snippets.
- Updated the Classic component result handling wrt to latest changes
- Remvoed the Classic Container view.
- Removed commented code and indented the page.

--- a/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>net8.0-ios;net8.0-android</TargetFrameworks>
+        <TargetFrameworks>net9.0-ios;net9.0-android</TargetFrameworks>
         <OutputType>Exe</OutputType>
         <RootNamespace>ScanbotSDK.MAUI.Example</RootNamespace>
         <UseMaui>true</UseMaui>
@@ -19,17 +19,9 @@
         <!-- Supported Platforms -->
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">13.0</SupportedOSPlatformVersion>
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
-        <Platforms>x64;ARM64</Platforms>
         <WarningsAsErrors>NU1603</WarningsAsErrors>
         <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
     </PropertyGroup>
-
-     <PropertyGroup Condition="$(TargetFramework.Contains('ios'))">
-        <RuntimeIdentifier Condition="'$(RuntimeIdentifier)' == ''">ios-arm64</RuntimeIdentifier>
-        <RuntimeIdentifier Condition="'$(RuntimeIdentifier)' == 'iossimulator-arm64'">iossimulator-x64</RuntimeIdentifier>
-        <ForceSimulatorX64ArchitectureInIDE>true</ForceSimulatorX64ArchitectureInIDE>
-    </PropertyGroup>
-
     <ItemGroup>
         <!-- App Icon -->
         <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
@@ -47,9 +39,7 @@
         <!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
         <MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
     </ItemGroup>
-
     <ItemGroup>
-        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="6.1.0" />
-        <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.*" />
+      <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="7.0.0-alpha.3" />
     </ItemGroup>
 </Project>
