--- a/BarcodeSDK.MAUI.Example/Platforms/Android/AndroidManifest.xml
+++ b/BarcodeSDK.MAUI.Example/Platforms/Android/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="io.scanbot.example.sdk.barcode.maui" android:versionCode="1" android:versionName="1.0">
 	<application android:allowBackup="true" android:supportsRtl="true" android:label="BarcodeSDK MAUI" />
 	
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
-
-	<!-- Uncomment to enable downloading of images from URLs in RTU v2 -->
-	<!-- <uses-permission android:name="android.permission.INTERNET" /> -->
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="35" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-feature android:name="android.hardware.camera" />
+	
+	<!-- Below permission is required for downloading the images from URLs in the RTU UI -->
+	<uses-permission android:name="android.permission.INTERNET" />
 </manifest>
