--- a/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -40,6 +40,6 @@
         <MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="7.0.0-rc.12" />
+      <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="7.0.0" />
     </ItemGroup>
 </Project>
