NET BS 7.0.0 - Release (#62)
- Fixed Breaking changes and Updated to the new code
- Updated from .NET 8 to .NET 9
- Droid: Removed unused code
- Droid: Added null checks and Fixed Cancel Scanner usecase.
- iOS: Disposed viewController objects after scan.
- Updated the libraries.txt
- Droid: Updated the TargetFrameWork from 33 to 35
- Droid: Removed the unnecessary FinderOverlay from Classic Component layout
- Droid: Added ReturnImage true for Classic Barcode result.
- iOS: Added BaseViewController and common methods/properties related to the UI updates.
- iOS: Fixed the Classic Component UI and minor issues (flash, title, colour, etc)
- iOS: Updated the navigation bar layout.
- iOS: Barcode Details: Updated the BarcodeDetails page layout from height calculation to Constraints layout
- iOS: Updated the BarcodeDetailsController with AutoLayout constraints and removed the existing BarcodeDetailsView.
- iOS: Added UITableView for displaying GDR Docs dynamically.
- iOS: Fixed UI issues and Structural changes suggested over the PR.
- Droid: Fixed the comments, Removed unused files, Fixed the snippets.
- Droid: Renamed files, with proper naming conventions.
- Droid: Updated the layout for barcode details page.
- Droid: Added project configs to speed up android builds
- iOS: Application set to portrait only.
- Snippets updated
- Updated the ReadMe file.
- Unused usings removed
- Droid: Added the common Utils function to apply WindowInsets. Applied it to all the activities
- Removed unused code and comments.
- Replaced BarcodeFormats All to AcceptedTypes formats
- iOS: Updated the null and empty check for Barcode RTU results

Co-authored-by: Marko <marko@scanbot.io>

--- a/BarcodeSDK.NET.Droid.Example/BarcodeSDK.NET.Droid.Example.csproj
+++ b/BarcodeSDK.NET.Droid.Example/BarcodeSDK.NET.Droid.Example.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>net8.0-android</TargetFrameworks>
+        <TargetFramework>net9.0-android</TargetFramework>
         <SupportedOSPlatformVersion>21.0</SupportedOSPlatformVersion>
         <OutputType>Exe</OutputType>
         <Nullable>disable</Nullable>
@@ -8,15 +8,23 @@
         <ApplicationId>io.scanbot.example.sdk.barcode.net</ApplicationId>
         <ApplicationVersion>1</ApplicationVersion>
         <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
-        <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
+        <EmbedAssembliesIntoApk>false</EmbedAssembliesIntoApk>
         <RootNamespace>BarcodeSDK.NET.Droid</RootNamespace>
-        <Platforms>x64;ARM64</Platforms>
         <CreatePackage>false</CreatePackage>
         <MtouchLink>SdkOnly</MtouchLink>
         <WarningsAsErrors>NU1603</WarningsAsErrors>
     </PropertyGroup>
     
+    <!-- Speeds up debug builds -->
+    <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
+        <DebugType>portable</DebugType>
+        <RunAOTCompilation>false</RunAOTCompilation>
+        <PublishTrimmed>false</PublishTrimmed>
+        <UseInterpreter>false</UseInterpreter>
+        <AndroidLinkMode>None</AndroidLinkMode>
+        <AndroidUseSharedRuntime>true</AndroidUseSharedRuntime>
+    </PropertyGroup>
     <ItemGroup>
-         <PackageReference Include="ScanbotBarcodeSDK.NET" Version="6.1.0" />
+      <PackageReference Include="ScanbotBarcodeSDK.NET" Version="7.0.0" />
     </ItemGroup>
 </Project>
