--- a/BarcodeSDK.NET.Droid.Example/AndroidManifest.xml
+++ b/BarcodeSDK.NET.Droid.Example/AndroidManifest.xml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0.0" 
 		package="io.scanbot.example.sdk.barcode.net">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="33" />
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="35" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	
-	<!-- Uncomment to enable downloading of images from URLs in RTU v2 -->
-	<!-- <uses-permission android:name="android.permission.INTERNET" /> -->
-	<application android:label="BarcodeSDK.NET"  android:theme="@style/AppTheme"></application>
+	<!-- Enables downloading of images from URLs in RTU UI -->
+	 <uses-permission android:name="android.permission.INTERNET" />
+	<application android:label="BarcodeSDK.NET" android:theme="@style/AppTheme" />
 </manifest>
