MAUI BS 7.1: iOS - disabled dark mode theme support

--- a/BarcodeSDK.MAUI.Example/Platforms/iOS/Info.plist
+++ b/BarcodeSDK.MAUI.Example/Platforms/iOS/Info.plist
@@ -47,5 +47,7 @@
 	<string>Application would like to use photos app for importing images</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Application would like to use photos app for importing images</string>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 </dict>
 </plist>
