NET BS 7.1: Turned off dark mode support and updated overlay text style properties

--- a/BarcodeSDK.NET.iOS.Example/Info.plist
+++ b/BarcodeSDK.NET.iOS.Example/Info.plist
@@ -49,5 +49,7 @@
 	<false/>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleLightContent</string>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 </dict>
 </plist>
