--- a/BarcodeSDK.MAUI.Example/Platforms/Android/AndroidManifest.xml
+++ b/BarcodeSDK.MAUI.Example/Platforms/Android/AndroidManifest.xml
@@ -10,5 +10,5 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 
 	<!-- Below permission is required for the mock camera. Uncomment if you want to use it -->
-	<!-- <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />-->
+	<!-- <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />-->
 </manifest>
