--- a/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -45,6 +45,6 @@
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Maui" Version="13.0.0" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="10.0.*" />
-        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="8.0.0-alpha.1" />
+        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="8.0.0-maui-local.1" />
     </ItemGroup>
 </Project>
