--- a/BarcodeSDK.NET.Droid.Example/BarcodeSDK.NET.Droid.Example.csproj
+++ b/BarcodeSDK.NET.Droid.Example/BarcodeSDK.NET.Droid.Example.csproj
@@ -25,6 +25,6 @@
         <AndroidUseSharedRuntime>true</AndroidUseSharedRuntime>
     </PropertyGroup>
     <ItemGroup>
-      <PackageReference Include="ScanbotBarcodeSDK.NET" Version="8.0.0-net-local.1" />
+      <PackageReference Include="ScanbotBarcodeSDK.NET" Version="8.0.0-alpha.1" />
     </ItemGroup>
 </Project>
