--- a/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
+        <!-- .NET 10 TargetFrameworks -->
         <TargetFrameworks>net10.0-ios;net10.0-android</TargetFrameworks>
+        
         <OutputType>Exe</OutputType>
         <RootNamespace>ScanbotSDK.MAUI.Example</RootNamespace>
         <UseMaui>true</UseMaui>
@@ -42,9 +44,20 @@
         <!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
         <MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
     </ItemGroup>
-    <ItemGroup>
+    <!-- When running with the .NET 9 target frameworks -->
+    <ItemGroup Condition="$(TargetFramework.Contains('net9'))">
+        <PackageReference Include="CommunityToolkit.Maui" Version="9.1.0" />
+        <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="9.0.51" />
+        <PackageReference Include="Microsoft.Maui.Controls" Version="9.0.51" />
+    </ItemGroup>
+    <!-- When running with the .NET 10 target frameworks -->
+    <ItemGroup Condition="$(TargetFramework.Contains('net10'))">
         <PackageReference Include="CommunityToolkit.Maui" Version="13.0.0" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="10.0.*" />
-        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="8.0.0-rc.3" />
+    </ItemGroup>
+    <ItemGroup>
+        
+        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="8.0.0-alpha.7" />
+       <!-- <ProjectReference Include="..\..\scanbot-sdk-maui\BarcodeSDK\BarcodeSDK.MAUI\BarcodeSDK.MAUI.csproj" /> -->
     </ItemGroup>
 </Project>
