--- a/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -56,6 +56,6 @@
         <PackageReference Include="Microsoft.Maui.Controls" Version="10.0.*" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="8.0.0-alpha.7" />
+           <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="8.0.0-rc.4" />
     </ItemGroup>
 </Project>
