--- a/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
+++ b/BarcodeSDK.MAUI.Example/BarcodeSDK.MAUI.Example.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFrameworks>net9.0-ios;net9.0-android</TargetFrameworks>
+        <!-- .NET 10 TargetFrameworks -->
+        <TargetFrameworks>net10.0-ios;net10.0-android</TargetFrameworks>
+
         <OutputType>Exe</OutputType>
         <RootNamespace>ScanbotSDK.MAUI.Example</RootNamespace>
         <UseMaui>true</UseMaui>
@@ -20,7 +22,10 @@
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">13.0</SupportedOSPlatformVersion>
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
         <WarningsAsErrors>NU1603</WarningsAsErrors>
-        <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU' And $(TargetFramework.Contains('-ios'))">
+        <CreatePackage>false</CreatePackage>
+        <RuntimeIdentifiers>ios-arm64;iossimulator-x64</RuntimeIdentifiers>
     </PropertyGroup>
     <ItemGroup>
         <!-- App Icon -->
@@ -39,10 +44,18 @@
         <!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
         <MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
     </ItemGroup>
-    <ItemGroup>
-        <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="7.1.1" />
+    <!-- When running with the .NET 9 target frameworks -->
+    <ItemGroup Condition="$(TargetFramework.Contains('net9'))">
         <PackageReference Include="CommunityToolkit.Maui" Version="9.1.0" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="9.0.51" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="9.0.51" />
+    </ItemGroup>
+    <!-- When running with the .NET 10 target frameworks -->
+    <ItemGroup Condition="$(TargetFramework.Contains('net10'))">
+        <PackageReference Include="CommunityToolkit.Maui" Version="13.0.0" />
+        <PackageReference Include="Microsoft.Maui.Controls" Version="10.0.*" />
+    </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="ScanbotBarcodeSDK.MAUI" Version="8.0.0" />
     </ItemGroup>
 </Project>
